Homework1/Part2/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
* {
    font-family: 'Roboto', sans-serif;
}

body {
    /* background-color:rgb(123, 195, 243); */
    background-color: rgb(19, 19, 70);
}

.sidebar {
    position: fixed;
    right: 0;
    top: 0;
    width: 20vw;
    height: 100vh;
    
    background-color: rgb(128, 0, 0);
    
    
}

#logo {
    background-color: rgb(2, 41, 41);
    padding: 12px;
    border-radius: 10px;
    
}

#NCSU {
    /* background-color: red; */
    display: flex;
    color: rgb(255, 255, 255);
    padding: 10px;
    justify-content: center;
    
    border-radius: 10px;
    font-size: 2vh;

}



.student {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#studentPhoto { 
    border-radius: 300px;
    width: 10vw;

    
}

#username {
    text-align: center; 
    
    color: white;
    font-size: 2vh;
    
}

#email {
    text-align: center; 

    color: white;
    font-size: 2vh;
}

.links {
    display: flex;
    flex-direction: column;
   
    justify-content: space-between;
    align-items:center;
    font-size: larger;

    

}  

.asidefooterlinks {
    display: flex;
    flex-direction: column;
    justify-content:space-between;
    align-items:center;
    font-size: larger;
    
    
}
 
.headerLeft {
    display: flex;
    flex-direction: row;
    background-color: rgb(128, 0, 0);
    padding: 10px;
    border-radius: 10px;
    width: 20vw;
    float: left;
}

#Greetings {
    color: white; 
    font-size: larger;
    padding-right: 3%;
}

#search {
    color: white; 
    font-size: larger;
    padding-right: 3%;
}


 .headerRight {
    margin-bottom: 10px;
    display: flex;
    flex-direction: row-reverse;
    justify-content: right;
    /* background-color: rgb(48, 48, 48);  */
    border-radius: 10px;
    width: 55vw;
    height: 10vh;
    right: 0;
 }



.accountDropdown .editandlogout {
    display: none;
}
.accountDropdown:hover .editandlogout {
    display: block;
    border: 1px solid black;
    background-color: rgb(43, 39, 42);
    border-radius: 10px;
    
    padding: 10px;
    position: fixed;
}

.accountDropdown:hover .editandlogout a {
    text-decoration: none;
    color: white;
}

.settingsDropdown .settingsandupdate {
    display: none;
}
.settingsDropdown:hover .settingsandupdate {
    display: block;
    padding:10px;
    border: 1px solid black;
    background-color: rgb(43, 39, 42);
    border-radius: 10px;
    position: fixed;
}

.settingsDropdown:hover .settingsandupdate a {
    text-decoration: none;
    color: white;
}

.notificationsdropdown .notifications {
    display: none;
}
.notificationsdropdown:hover .notifications {
    display: block;
    padding:10px;
    border: 1px solid black;
    background-color: rgb(43, 39, 42);
    border-radius: 10px;
    position: fixed;
    
}

.notificationsdropdown:hover .notifications h6 {
    text-decoration: none;
    color: white;
    font-size: larger;
}

.notificationsdropdown:hover .notifications a {
    text-decoration: none;
    color: white;
    font-size: larger;
}

.notifications {
    color: white;
}

.messagesdropdown .messages {
    display: none;
}
.messagesdropdown:hover .messages {
    display: block;
    padding:10px;
    border: 1px solid black;
    background-color: rgb(43, 39, 42);
    border-radius: 10px;
    position: fixed;
}

.messagesdropdown:hover .messages h6 {
    text-decoration: none;
    color: white;
    font-size: larger;
}

.messagesdropdown:hover .messages a {
    text-decoration: none;
    color: white;
    font-size: larger;
}

.messages {
    color: white;
    font-size: larger;
}

#edit {
    color:white;
}

#logout {
    color:white;
}

#settings {
    color:white;
}

#update {
    color:white;
}

.studentButton {
    background-color: rgb(151, 148, 148);
    color: white;
    border-radius: 10px;
    font-size: larger;
}

#settingsbutton {
    width: 3vw;
    height: 3vh;
    font-size: larger;
    background-color: rgb(151, 148, 148);
    border-radius: 10px;
}

#notificationsbutton {
    width: 3vw;
    height: 3vh;
    font-size: larger;
    background-color: rgb(151, 148, 148);
    border-radius: 10px;
    color: rgb(255, 255, 0);
}

#messagesButton > span {
    
    font-size: smaller;
    color: red;
}

#messagesButton {
    width: 3vw;
    height: 3vh;
    font-size: larger;
    background-color: rgb(151, 148, 148);
    color: rgb(255, 255, 255);
    border-radius: 10px;
}

#sidebarsettings {
    color: white;
    font-size: 3vh;
}

#sidebarlogout {
    color: white;
    font-size: 3vh;
}

#sidebardashboard {
    color: white;
    font-size: 3vh;
}

#sidebarforms {
    color: white;
    font-size: 3vh;
}

#sidebarfeatures {
    color: white;
    font-size: 3vh;
}

#sidebarbuttons {
    color: white;
    font-size: 3vh;
}

#sidebartypography {
    color: white;
    font-size: 3vh;
}

#sidebartables {
    color: white;
    font-size: 3vh;
}

#sidebarcharts {
    font-size: 3vh;
    color: white;
}

#studentButton {
    height: 10px;

}



.boxes {
    display: inline-grid;
    width: 70vw;
    grid-template-columns: 2;
    grid-template-rows: 2;
    gap: 10px;
    
    
}

.borrowed {
    display: flex;
    flex-direction: column;
    grid-column: 1;
    grid-row: 1;
    background-color:rgb(19, 116, 116);
    color: white;
    border-radius: 10px;
    padding: 10px;
    
}

.borrowed h5 {
    font-size: 55px;
    
}

.borrowed p {
    font-size: 30px; 
}

.profit {
    display: flex;
    flex-direction: column;
    grid-column: 2;
    grid-row: 1;
    color: white;
    background-color:rgb(53, 110, 110);
    border-radius: 10px;
    padding: 10px;
   
}

.profit h5 {
    font-size: 55px;
    
}

.profit p {
    font-size: 30px; 
}

.conversion {
    display: flex;
    flex-direction: column;
    grid-column: 1;
    grid-row: 2;
    color: white;
    background-color:rgb(10, 15, 15);
    border-radius: 10px;
    padding: 10px;
    
}

.conversion h5 {
    font-size: 55px;
    
}

.conversion p {
    font-size: 30px; 
}

.income {
    display: flex;
    flex-direction: column;
    grid-column: 2;
    grid-row: 2;
    color: white;
    background-color:rgb(10, 44, 44);
    border-radius: 10px;
    padding: 10px;
    
}

.income h5 {
    font-size: 55px; 
}

.income p {
    font-size: 30px; 
}


 /* .locationrevenues {
    display: inline-flex;
    grid-template-rows: 10;
    grid-template-columns: 1;
    width: 70vw;
    gap: 20px;
}  */

#titlerevenue {
    /* grid-row: 1;
    grid-column: 1/5; */
    background-color: blueviolet;
    display: inline-flex;
    justify-content: center;
    width: 70vw;
    font-size: 55px;
    border-radius: 10px;
}

.locrevenuessubtitles {
    /* grid-row: 2;
    grid-column: 1/5; */
    display:inline-flex;
    width: 70vw;
    font-size: 40px;
    background-color: aqua;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    border-radius: 10px;
}

.locrevenuessubtitles > h5 {
    color:white;
    
}

#locrevbutton {
    width: 20vw;
    height: 5vh;
    border-radius: 10px;
    background-color: rgb(9, 87, 150);
    color:white;
    
}

#mapimage {
    grid-row: 3/7;
    grid-column: 1/5;
}

.locationtable {
    display: inline-grid;
    grid-template-columns: 5;
    grid-template-rows: 3;
    background-color: antiquewhite;
    width: 70vw;
    border-radius: 10px;
    gap: 10px;
}

.usa {
    display: flex;
    grid-row: 1;
    grid-column: 1/5;
    font-size: 30px;
    align-items: center;
    justify-content: center;
}


.phillipines {
    display: flex;
    grid-row: 2;
    grid-column: 1/5;
    font-size: 30px;
    align-items: center;
    justify-content: center;
}

.uk {
    display: flex;
    grid-row: 3;
    grid-column: 1/5;
    font-size: 30px;
    align-items: center;
    justify-content: center;
}

.canada {
    display: flex;
    grid-row: 4;
    grid-column: 1/5;
    font-size: 30px;
    align-items: center;
    justify-content: center;
}

.france {
    display: flex;
    grid-row: 5;
    grid-column: 1/5;
    font-size: 30px;
    align-items: center;
    justify-content: center;
}

#mapimage {
    width: 70vw;
}

